style.css
body {
    font-family: "Arial Black", sans-serif;
    font-weight: 900;
    color: black;
    background-color: white;
    margin: 0;
    height: 100vh;
}

::selection {
    background-color: rgb(255, 88, 88);
    color: white;

}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 45px;
}

.grid {
    margin: auto;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    gap: 0px;
    width: calc(100% - 30px);
    aspect-ratio: 1;
    padding: 0;
    max-height: 90vh;
}

.row {
    display: flex;
    grid-template-columns: repeat(3, 1fr);
    margin: 0;
    padding: 0;
}

.box {
    aspect-ratio: 1;
    max-width: calc((100% - 30px) / 3);
    border: 1vw solid black;
    font-size: 8vw;
    margin: 0;
    box-sizing: border-box;
    text-align: center;
}

.info {
    width: calc(100% - 30px);
    justify-content: flex-start;
    align-items: flex-start;
}

h1 {
    font-size: 3.5vw;
    text-decoration: underline;
}

p {
    font-size: 2.2vw;
}

#button-row {
    display: flex;
    align-items: center;
    justify-content: center;
}

button {
    background-color: rgb(255, 88, 88);
    margin: 1vw;
    padding: 1.3vw;
    border-radius: 12px;
    border: 0.5vw solid black;
    color: black;
    font-weight: 600;
    font-size: 2.7vw;
    width: max-content;
}

/* Remove border around edges */
#row-0-box-0 {
    border-left: none;
    border-top: none;
}

#row-0-box-1 {
    border-top: none;
}

#row-0-box-2 {
    border-right: none;
    border-top: none;
}

#row-1-box-0 {
    border-left: none;
}

#row-1-box-2 {
    border-right: none;
}

#row-2-box-0 {
    border-left: none;
    border-bottom: none;
}

#row-2-box-1 {
    border-bottom: none;
}

#row-2-box-2 {
    border-right: none;
    border-bottom: none;
}


@media (max-width: 500px) {
    .box {
        border-width: 6px;
    }
}

@media (max-width: 300px) {
    .box {
        border-width: 4px;
    }
}

